# image-ocr-worker

./: .env  Dockerfile  pyproject.toml  requirements.txt
app/: main.py
app/config/: env_config.py
app/db/: models.py
app/message_queue/: aio_consumer.py
app/messaging/: aio_consumer.py  publish_message.py
app/messaging/consume/: aio_consumer.py
app/ocr/: ocr_config.yaml  ocr_service.py  ocr_service_impl.py
app/ocr/models/rec/: en_PP-OCRv4_rec_infer.onnx
app/service/: ocr_config.yaml  ocr_service.py
app/service/models/det/: en_PP-OCRv3_det_infer.onnx
app/service/models/rec/: korean_PP-OCRv3_rec_infer.onnx
app/storage/: aio_boto.py
